# session-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fs_utils.rs  lib.rs  main.rs
src-tauri/src/commands/: fork_tree.rs  mod.rs  session_manager.rs
src-tauri/src/fork_tree/: cache.rs  filter.rs  hash_chain.rs  mod.rs  tree_builder.rs  types.rs
src-tauri/src/session_manager/: messages.rs  metadata.rs  mod.rs  operations.rs  scan.rs  types.rs
src-tauri/src/session_manager/providers/: claude.rs  codex.rs  gemini.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs  qoder.rs  utils.rs
src-tauri/tests/fixtures/synthetic-claude/: A--init--config--write-api--test.jsonl  B-of-A--init--config--add-auth--test-auth.jsonl  C-of-A--init--config--write-api--add-caching.jsonl  D--setup--ci--deploy.jsonl  E-of-D--setup--docker--validate.jsonl  F--readme--license.jsonl  G--debug--fix.jsonl  H--hello.jsonl  README.md  agent-s1-sub--explore.jsonl  agent-s2-sub--check-deps.jsonl
src-tauri/tests/fixtures/synthetic-codex/: A--begin--check-types--fix-bug--deploy.jsonl  B-of-A--begin--check-types--add-tests--refactor--docs.jsonl  C--init--config-db--write-api--test.jsonl  D-of-C--init--config-db--add-auth.jsonl  E-of-C--init--config-db--write-api--add-caching.jsonl  K--fix-typo--done.jsonl  (+10 more)
src-tauri/tests/scripts/: gen-claude-fixtures.py  gen-codex-fixtures.py
(+72 files in other folders)
