[package]
name = "session-manager"
version = "0.1.0"
description = "Local AI coding-agent session manager"
authors = ["session-manager"]
license = "MIT"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "session_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tempfile = "3"
trash = "3"
